npm run dev works

--- a/client/index.html
+++ b/client/index.html
@@ -7,11 +7,10 @@
 
 	<title>Zombie Game</title>
 
-	<link rel="stylesheet" href="css/{{name}}.{{version}}{{#production}}.min{{/production}}.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+	<link rel="stylesheet" type="text/css" href="css/{{name}}.{{version}}{{#production}}.min{{/production}}.css">
 </head>
 <body>
-<h1>hello</h1>
 	<div id="app"></div>
 
 	<script type="text/javascript" src="js/{{name}}.{{version}}{{#production}}.min{{/production}}.js"></script>
